# unsafe_fn

./: Cargo.toml  ChangeLog  README.md
src/: lib.rs
tests/: test.rs
